--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:id="@+id/kohlenhydrate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Insert kcal/g"
+            android:hint="Insert BE"
             android:textSize="24sp"
             android:padding="4dp"
             app:layout_constraintTop_toBottomOf="@+id/gewicht"
