--- a/app/src/main/res/layout/item_database.xml
+++ b/app/src/main/res/layout/item_database.xml
@@ -32,7 +32,17 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/gewichtid"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/delete"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" > </TextView>
+    <!-- Button to delete entry of database -->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/delete"
+        android:text="Delete"
+        app:layout_constraintStart_toEndOf="@id/kohlenhydrateid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
